--- a/pishing.ipynb
+++ b/pishing.ipynb
@@ -161,6 +161,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d5d5f2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['status'] = df['status'].map({'legitimate': 0, 'phishing': 1})\n",
+    "df.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "16b3be7b",
    "metadata": {},
@@ -178,10 +189,215 @@
     "responda las siguientes preguntas:\n",
     "1. ¿Qué ventajas tiene el análisis de una URL contra el análisis de otros datos, cómo el tiempo\n",
     "de vida del dominio, o las características de la página Web?\n",
+    "- El análisis de URLs presenta varias ventajas significativas frente a otros enfoques utilizados en la detección de phishing, como el análisis del tiempo de vida del dominio o las características del contenido de la página web. Una ventaja es que el análisis de URLs es especialmente eficaz frente a ataques de tipo zero-day, ya que no depende de listas negras ni de información histórica del dominio. Por ejemplo, el tiempo de vida del dominio, aunque es una característica útil, suele requerir acceso a servicios externos como WHOIS, lo que introduce retrasos y dependencia de terceros. Varios estudios destacan que los atacantes suelen ocultar o minimizar el contenido de las páginas phishing, utilizando sitios con muy poca información o contenido dinámico, lo que dificulta los enfoques basados en análisis de páginas web. En estos casos, la URL sigue siendo una fuente de información confiable y accesible para la detección del ataque\n",
+    "\n",
     "2. ¿Qué características de una URL son más prometedoras para la detección de phishing?\n",
+    "Algunas caracteristicas de las URLs para detectar pishing es que la estructura de la URL son especialmente relevantes, dado que se busca la longitud total de la URL, el número de subdominios, la cantidad de '.' y el uso de direcciones IP en lugar de nombres de dominio. Por lo que las URL de pishing suelen ser más largas y complejas con el objetivo de confundir al user. Tambien otra caracteristica es presencias como simbolos @, -, _, // y otros sibolos no alfanumericos son común en URL maliciosas. Tanvuen aun que no se considera estrictamente parte de la URL, las características temporales asociadas al dominio, como la reciente creación del dominio o cambios frecuentes en la configuración, complementan eficazmente el análisis cuando están disponibles.\n",
+    "\n",
     "En base a la respuesta anterior escriba al menos quince funciones basadas en los artículos, para\n",
     "derivar características que un modelo pueda utilizar y añada dichas características al dataset original.\n",
     "Incluya dentro de las quince funciones, la entropía de Shanon y relativa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9596067f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from urllib.parse import urlparse\n",
+    "from collections import Counter\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "113edf1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Longitud de la URL\n",
+    "def url_length(url):\n",
+    "    return len(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50511c39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Longitud del dominio\n",
+    "def domain_length(url):\n",
+    "    return len(urlparse(url).netloc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a915e2e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Número de subdominios\n",
+    "def count_subdomains(url):\n",
+    "    domain = urlparse(url).netloc\n",
+    "    return domain.count('.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2a80e29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uso de direccion ip en lugar de dominio\n",
+    "def has_ip_address(url):\n",
+    "    domain = urlparse(url).netloc\n",
+    "    return int(any(char.isdigit() for char in domain))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4124706a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cantidad de digitos en la URL\n",
+    "def count_digits(url):\n",
+    "    return sum(char.isdigit() for char in url)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37951748",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cantidad de letras\n",
+    "def count_letters(url):\n",
+    "    return sum(char.isalpha() for char in url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71baca95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cantidad de caracteres especiales\n",
+    "def count_special_characters(url):\n",
+    "    return sum(not char.isalnum() for char in url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d066614",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# presencia del simbolo @\n",
+    "def has_at_symbol(url):\n",
+    "    return int('@' in url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3138b6ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Presencua de guioes\n",
+    "def has_hyphen(url):\n",
+    "    return int('-' in url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed6cf147",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Presencia de doble slash //\n",
+    "def has_double_slash(url):\n",
+    "    return int(url.find('//', url.find('//') + 2) != -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b21e948",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uso de HTTPS\n",
+    "def uses_https(url):\n",
+    "    return int(urlparse(url).scheme == 'https')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25aab352",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# numero de parametros en la URL\n",
+    "def count_parameters(url):\n",
+    "    return urlparse(url).query.count('&') + 1 if urlparse(url).query else 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bda9828a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# shannon entropy H(X)=−∑p(x)log2​p(x)) para cada caracter en la URL\n",
+    "def shannon_entropy(url):\n",
+    "    if not url:\n",
+    "        return 0.0\n",
+    "\n",
+    "    char_counts = Counter(url)\n",
+    "    total_chars = len(url)\n",
+    "\n",
+    "    entropy = 0.0\n",
+    "    for count in char_counts.values():\n",
+    "        p = count / total_chars\n",
+    "        entropy -= p * math.log2(p)\n",
+    "\n",
+    "    return entropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fee23961",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# relative entropy \n",
+    "def relative_entropy(url):\n",
+    "    if not url:\n",
+    "        return 0.0\n",
+    "\n",
+    "    unique_chars = len(set(url))\n",
+    "    if unique_chars <= 1:\n",
+    "        return 0.0\n",
+    "\n",
+    "    max_entropy = math.log2(unique_chars)\n",
+    "    return shannon_entropy(url) / max_entropy"
    ]
   }
  ],
